              -I can exclude map indexes from color grid
              -r cube as new default container in HSV/HSL mode
              -R to optionally show primary and secondary reference colors
              -U adds simple sorting of colors along with already unique sort
            planar:
              -V verbose lists all winding numbers found in a model
            wythoff: new operators and operator sequences, extend colour
              by associated element
            conway: new format for conway operators with 2 numbers e.g L_n:m
              new operators added, B,E,G,W
              operators L and l may now take subscripts
              status reporting method update
         Fixes
            usage helps reviewed and organized
            minor bug fixes and improvements
            major code review with fixes for potential issues

Version 0.27
01-10-20 Adrian Rossiter <adrian@antiprism.com>
         Changes
            off_color: new -e jJ to colour by edge length
            zono: -P add spirallohedra, new -T translation product
            conway: g and s take a numeric parameter
         Fixes
            off2vrml: avoid duplicate PROTO statements
            minor bug fixes and improvements

Version 0.26
05-04-19 Adrian Rossiter <adrian@antiprism.com>
         New Programs
            rotegrity: make rotegrity and nexorade models
            mmop_origami: multimodular polyhedron origami models
         Changes
            antiview: new keys 'u/U' change label size, 'M' planar
              face labels
            wythoff: new option -C for colouring by base elements
            conway: new options -C colouring method, -R colour seed
            geodesic, geo_m_n: change direction of pattern turn,
              so (m, n) is like previous (n, m)
            bravais: added inverse of f and i centering types
            n_icons: swap -J and -L option letters
            radial: renamed to off_color_radial