@@ -50,6 +50,8 @@ Coloring Options (run 'off_util \fB\-H\fR color' for help on color formats)
 \fB\-T\fR <tran> face transparency. valid range from 0 (invisible) to 255 (opaque)
 .HP
 \fB\-m\fR <maps> color maps for all elements to be tried in turn (default: rng)
+.IP
+rng and rainbow maps without entries specified are calculated
 .HP
 \fB\-n\fR <maps> color maps for axes (A=1: calculated, A=2: map_red:blue:yellow)
 .TP
