@@ -160,9 +160,9 @@ n \- negative of absolute value of winding number
 .HP
 \fB\-m\fR <maps> color maps for faces to be tried in turn (default: compound)
 .HP
-\fB\-n\fR <maps> maps for negative winding numbers (default: rng17_S0V0.5:0)
+\fB\-n\fR <maps> maps for negative winding numbers (default: calculated)
 .IP
-(map position zero not used. default is 16 gradients)
+(map position zero not used for negative winding maps)
 .SH "SEE ALSO"
 The full documentation for
 .B planar
